style: fix the modal on mobile

--- a/css/partials/theme/_products.scss
+++ b/css/partials/theme/_products.scss
@@ -246,6 +246,7 @@
 			position: relative;
 			right: auto;
 			top: auto;
+			z-index: 10;
 
 			li {
 				transform: none;
